[FIX] Fix navbar overflow.

--- a/frontend/src/components/Nightsky.css
+++ b/frontend/src/components/Nightsky.css
@@ -1,5 +1,5 @@
 .nsContainer {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     background-image: radial-gradient(1600px at 70% 120%, rgba(33, 39, 80, 1) 10%, #020409 100%);
 }
